--- a/web/pom.xml
+++ b/web/pom.xml
@@ -28,6 +28,7 @@
         <logback.version>1.1.3</logback.version>
         <mysql.version>5.1.35</mysql.version>
         <commons-lang3.version>3.4</commons-lang3.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
@@ -103,6 +104,20 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <!-- tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${springframework.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
