--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>web</artifactId>
+    <artifactId>analytics-web</artifactId>
     <packaging>war</packaging>
     <name>web</name>
     <url>http://maven.apache.org</url>
