--- a/web/pom.xml
+++ b/web/pom.xml
@@ -29,6 +29,7 @@
         <mysql.version>5.1.35</mysql.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <junit.version>4.12</junit.version>
+        <fasterxml.version>2.5.4</fasterxml.version>
     </properties>
 
     <dependencies>
@@ -118,6 +119,17 @@
             <artifactId>spring-test</artifactId>
             <version>${springframework.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${fasterxml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${fasterxml.version}</version>
         </dependency>
 
     </dependencies>
