--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -11,10 +11,10 @@
 
 
     <groupId>com.ghx.hackaton.analytcis</groupId>
-    <artifactId>connector</artifactId>
+    <artifactId>tomcat-connector</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>connector</name>
+    <name>tomcat-connector</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -40,4 +40,9 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+    </build>
+
 </project>
