--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <servlet-api.version>3.1.0</servlet-api.version>
+        <servlet-api.version>3.0.1</servlet-api.version>
         <jstl.version>1.2</jstl.version>
         <springframework.version>4.1.6.RELEASE</springframework.version>
         <hibernate.version>4.3.10.Final</hibernate.version>
@@ -28,6 +28,7 @@
         <logback.version>1.1.3</logback.version>
         <mysql.version>5.1.35</mysql.version>
         <commons-lang3.version>3.4</commons-lang3.version>
+        <commons-math3.version>3.5</commons-math3.version>
         <junit.version>4.12</junit.version>
         <fasterxml.version>2.5.4</fasterxml.version>
     </properties>
@@ -106,6 +107,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons-math3.version}</version>
+        </dependency>
+
 
         <!-- tests -->
         <dependency>
